<resources>
    <string name="app_name">HostelsInCity</string>
    <string name="title_activity_main">DashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="signin">Signin</string>
    <string name="signup">Sign Up</string>
    <string name="title_home">Home</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="submit">SUBMIT</string>
    <string name="attendanceSide">Attendance</string>
    <string name="assignmentSide">Assignment</string>
    <string name="leavesSide">Leaves</string>
    <string name="schedulesSide">Schedules</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_ur_mobile">Verify Your Mobile</string>
    <string name="waiting_to_automatically_detect_on_sms_sent_to">Waiting To Automatically Detect On SMS Sent To
    </string>
    <string name="city">City</string>
    <string name="hostelnumber">Number of Hostel Owned</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_repeat_new_password">Enter Repeat New Password</string>
    <string name="both_password_dosent_match">Both Password Doesnot Match</string>
    <string name="notificationsSide">Notifications</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="please_enter_valid_otp">Please enter valid otp</string>
    <string name="changePasswordSide">Change Password</string>
    <string name="logOut">Log Out</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="enter_valid_mobile_number">Enter valid mobile number</string>
    <string name="unexpected_error">Unexpected error please try again</string>
    <string name="loading_title">Hostel In City</string>
    <string name="share">Share</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="rate_us">Rate Us</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_otp_screen">OtpScreen</string>
    <string name="title_activity_update_password">UpdatePassword</string>
    <string name="title_activity_my_hostels">MyHostels</string>
    <string name="title_activity_my_bookings">MyBookings</string>
    <string name="title_activity_otp_verify">OtpVerify</string>
</resources>
