<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.OtpVerify"
        tools:showIn="@layout/activity_otp_verify">

    <LinearLayout
            android:id="@+id/header_"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:baselineAligned="false"
            android:elevation="6dp"
            android:orientation="horizontal"
            android:popupTheme="@style/AppTheme.PopupOverlay"
            tools:ignore="UnusedAttribute">

        <LinearLayout
                android:id="@+id/back_layout_verify_otp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/back_arrow"
                    tools:ignore="VectorDrawableCompat"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otp_verification"
                    android:textColor="@color/whitecolor"
                    android:textSize="18sp"
            />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:layout_below="@+id/header_"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/verify_ur_mobile"
                android:textSize="20sp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/blackcolor"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/waiting_to_automatically_detect_on_sms_sent_to"
                android:gravity="center"/>

        <TextView
                android:id="@+id/mobile_no_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/blackcolor"
                android:textStyle="bold"
                android:gravity="center"/>

        <EditText
                android:id="@+id/editTextOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:inputType="number"
                android:gravity="center"
                android:maxLength="4"
                android:layout_marginTop="50dp"
                android:textColor="@color/blackcolor"
                android:background="@drawable/edit_text_background"
                android:layout_marginStart="70dp"
                tools:ignore="LabelFor" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">
            <TextView
                    android:id="@+id/resendOtpTextView"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/resend_otp"/>
            <TextView
                    android:id="@+id/countdown_text"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="" />
        </LinearLayout>

        <Button
                android:id="@+id/button_submit_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/submit"
                android:textColor="@color/whitecolor"
                android:background="@drawable/submit_otp_back"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"/>

    </LinearLayout>


</RelativeLayout>