<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.ForgotPassword"
        tools:showIn="@layout/activity_forgot_password">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">
        <LinearLayout
                android:id="@+id/header_"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="6dp"
                android:popupTheme="@style/AppTheme.PopupOverlay"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:baselineAligned="false"
                tools:ignore="UnusedAttribute">

            <LinearLayout
                    android:id="@+id/back_layout_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        app:srcCompat="@drawable/back_arrow"
                        android:contentDescription="@string/todo"
                        tools:ignore="VectorDrawableCompat"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password_"
                        android:textColor="@color/whitecolor"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1.4">
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="50dp"
                    app:srcCompat="@drawable/password_svg_"
                    android:contentDescription="@string/todo"
                    tools:ignore="VectorDrawableCompat"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/back_ground_spinner">

                <EditText
                        android:id="@+id/mobile_textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:layout_marginStart="20dp"
                        android:background="@null"
                        android:textColor="@color/blackcolor"
                        android:hint="@string/mobile"/>

            </LinearLayout>


            <Button
                    android:id="@+id/submit_button_forgot_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/submit"
                    android:background="@drawable/submit_back_ground_forgot"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/whitecolor"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginBottom="25dp"/>




        </LinearLayout>

    </LinearLayout>



</RelativeLayout>