<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.UpdatePassword"
        tools:showIn="@layout/activity_update_password">

    <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--tools:ignore="UselessParent">-->
        <!--<ImageView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:padding="75dp"-->
                <!--android:alpha="0.05"-->
                <!--android:contentDescription="@string/todo"-->
                <!--tools:ignore="VectorDrawableCompat"/>-->
    <!--</LinearLayout>-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1.4">
            <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_margin="50dp"-->
            <!--app:srcCompat="@drawable/password_svg"-->
            <!--android:contentDescription="@string/todo"-->
            <!--tools:ignore="VectorDrawableCompat" />-->

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_password"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/redcolor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                android:layout_weight="1">


            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp">
                <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">
                    <ImageView
                            android:id="@+id/imageViewPassword"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerInParent="true"
                            app:srcCompat="@drawable/password_svg"
                            android:contentDescription="@string/todo" tools:ignore="VectorDrawableCompat"/>
                </RelativeLayout>

                <EditText
                        android:id="@+id/newPasswordChangePassword"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:textColor="@color/blackcolor"
                        android:layout_marginStart="70dp"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:hint="@string/new_password"
                        android:layout_height="wrap_content" />

                <ImageView
                        android:id="@+id/passwordImageShowUpdate"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:padding="8dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        app:srcCompat="@drawable/eye_svg_change"
                        android:contentDescription="@string/todo" tools:ignore="VectorDrawableCompat"/>
                <ImageView
                        android:visibility="gone"
                        android:id="@+id/passwordImageHideUpdate"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:padding="8dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        app:srcCompat="@drawable/eye_closed_svg_change"
                        android:contentDescription="@string/todo" tools:ignore="VectorDrawableCompat"/>

            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/redcolor"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp">
                <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="40dp">
                    <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerInParent="true"
                            app:srcCompat="@drawable/password_svg"
                            android:contentDescription="@string/todo" tools:ignore="VectorDrawableCompat"/>
                </RelativeLayout>

                <EditText
                        android:id="@+id/repeatNewPassword"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:textColor="@color/blackcolor"
                        android:layout_marginStart="70dp"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:hint="@string/repeat_new_password"
                        android:layout_height="wrap_content" />

                <ImageView
                        android:id="@+id/repeatPasswordImageShowUpdate"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:padding="8dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        app:srcCompat="@drawable/eye_svg_change"
                        android:contentDescription="@string/todo" tools:ignore="VectorDrawableCompat"/>
                <ImageView
                        android:visibility="gone"
                        android:id="@+id/repeatPasswordImageHideUpdate"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="5dp"
                        android:padding="8dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        app:srcCompat="@drawable/eye_closed_svg_change"
                        android:contentDescription="@string/todo"
                        tools:ignore="VectorDrawableCompat"/>

            </RelativeLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/redcolor"/>

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginStart="30dp"-->
            <!--android:layout_marginEnd="30dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:background="@drawable/back_ground_spinner">-->


            <!--<EditText-->
            <!--android:id="@+id/newPasswordChangePassword"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:textColor="@color/colorBlack"-->
            <!--android:background="@null"-->
            <!--android:inputType="textPassword"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:hint="@string/new_password"/>-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_marginStart="30dp"-->
            <!--android:layout_marginEnd="30dp"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:background="@drawable/back_ground_spinner">-->

            <!--<EditText-->
            <!--android:id="@+id/repeat_new_password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:textColor="@color/colorBlack"-->
            <!--android:background="@null"-->
            <!--android:inputType="textPassword"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:hint="@string/repeat_new_password"/>-->
            <!--</LinearLayout>-->



            <Button
                    android:id="@+id/submitButtonUpdatePassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/submit"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@color/whitecolor"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_marginBottom="25dp"/>




        </LinearLayout>

    </LinearLayout>


</RelativeLayout>