<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:orientation="vertical">


        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="50dp"
                android:src="@drawable/logohic"
                android:layout_weight="1.3"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                   android:layout_weight="1"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/illustration"
                   android:layout_weight="1.3"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">
        <!--<LinearLayout-->
                <!--android:visibility="gone"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="800dp"-->
                <!--android:layout_weight="2"-->
                <!--android:background="#FFF">-->
            <!--<ImageView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_marginBottom="20dp"-->
                    <!--android:layout_marginTop="20dp"-->
                    <!--android:src="@drawable/ic_launcher_background"-->
                    <!--android:layout_marginStart="40dp"-->
                    <!--android:layout_marginEnd="40dp"-->
                    <!--android:contentDescription="@string/todo"/>-->

        <!--</LinearLayout>-->

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1">

            <RelativeLayout
                    android:id="@+id/linear_layout_request_id"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:paddingStart="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <ImageView
                        android:id="@+id/image_verified"
                        android:layout_width="25dp"
                        android:layout_centerVertical="true"
                        android:layout_height="25dp"
                        android:src="@drawable/email_"
                        android:contentDescription="@string/todo"/>

                    <EditText
                            android:id="@+id/mobileNumberEditTextLogIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:textColor="#000000"
                            android:layout_marginTop="5dp"
                            android:layout_toEndOf="@+id/image_2"
                            android:layout_marginStart="45dp"
                            android:inputType="number"
                            android:paddingStart="5dp"
                            android:textSize="20sp"
                            android:maxLength="10"
                            android:background="@null"
                            android:layout_marginBottom="5dp"
                            android:hint="Mobile Number"/>

            </RelativeLayout>
            <View
                    android:id="@+id/view_1"
                    android:layout_below="@+id/linear_layout_request_id"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#FF0000"/>

            <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/view_1"
                    android:id="@+id/linear_layout_request_id_2"
                    android:layout_width="match_parent"
                    android:paddingStart="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <ImageView
                        android:id="@+id/passwordImageLogin"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/lock"
                        android:contentDescription="@string/todo"/>

                    <EditText
                            android:id="@+id/passwordEditTextLogIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:layout_toEndOf="@+id/image_2"
                            android:layout_marginStart="45dp"
                            android:textColor="#000000"
                            android:paddingStart="5dp"
                            android:layout_marginTop="5dp"
                            android:inputType="textPassword"
                            android:background="@null"
                            android:layout_marginBottom="5dp"
                            android:textSize="20sp"
                            android:hint="@string/password"/>

            </RelativeLayout>
            <View
                    android:layout_below="@+id/linear_layout_request_id_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:id="@+id/view2"
                    android:background="#FF0000"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/view2"
                    android:id="@+id/relativelayoutforgotpass"
                    android:layout_height="wrap_content">


                <TextView
                        android:layout_width="match_parent"
                        android:text="Forgot Password?"
                        android:id="@+id/forgotPassword"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:gravity="end"
                        android:textColor="@color/redcolor"
                        android:layout_alignParentEnd="true"/>


            </RelativeLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_signin"
                    android:layout_alignParentStart="true"
                    android:text="@string/signin"
                    android:id="@+id/linearLayoutSubmit"
                    android:textSize="18sp"
                    android:layout_marginTop="30dp"
                    android:layout_below="@+id/relativelayoutforgotpass"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                 />

            <TextView
                    android:layout_width="match_parent"
                    android:text="Create Account"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:id="@+id/createAccountTextView"
                    android:textColor="#FF0000"
                    android:textStyle="bold"
                    android:layout_below="@+id/linearLayoutSubmit"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true"
                   />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>